--- a/intelliquote/src/Components/EmailPage/EmailPage.css
+++ b/intelliquote/src/Components/EmailPage/EmailPage.css
@@ -1,1 +1,26 @@
-/* No CSS *//*# sourceMappingURL=EmailPage.css.map */
+.email {
+  margin: 1rem;
+  margin-bottom: 4px;
+  display: block;
+  text-align: center;
+}
+
+.email-input {
+  width: 60%;
+  padding: 12px 20px;
+  margin: 1rem 0;
+  margin-top: 0px;
+  display: inline-block;
+  border: none;
+  background: rgba(204, 204, 204, 0.4);
+  border-radius: 15px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  outline: none;
+}
+
+.email-div {
+  margin: 0.5em auto 0 auto;
+  text-align: center;
+}
+/*# sourceMappingURL=EmailPage.css.map */
