--- a/intelliquote/src/Components/EmailPage/EmailPage.css
+++ b/intelliquote/src/Components/EmailPage/EmailPage.css
@@ -1,3 +1,18 @@
+.container {
+  padding: 16px 0;
+  text-align: center;
+  width: 450px;
+  margin: 6rem auto;
+  margin-top: 10rem;
+  padding-top: 1em;
+  padding-bottom: 2em;
+  background: white;
+  border-radius: 4em;
+  z-index: 0;
+  -webkit-box-shadow: 0 0 25px rgba(41, 76, 96, 0.2);
+          box-shadow: 0 0 25px rgba(41, 76, 96, 0.2);
+}
+
 .email {
   margin: 1rem;
   margin-bottom: 4px;
@@ -22,5 +37,29 @@
 .email-div {
   margin: 0.5em auto 0 auto;
   text-align: center;
+}
+
+.submit {
+  background-color: #294c60;
+  display: inline-block;
+  color: white;
+  margin-top: 3em;
+  padding: 1em;
+  border: none;
+  cursor: pointer;
+  width: 100px;
+  -webkit-transition: 0.8s ease;
+  transition: 0.8s ease;
+  border-radius: 25px;
+  outline: none;
+  text-align: center;
+  margin: 0.5em auto 0 auto;
+}
+
+.submit-div {
+  display: inline-block;
+  text-align: center;
+  border-radius: 15px;
+  margin: 0.5em auto 0 auto;
 }
 /*# sourceMappingURL=EmailPage.css.map */
