--- a/intelliquote/src/Components/EmailPage/EmailPage.scss
+++ b/intelliquote/src/Components/EmailPage/EmailPage.scss
@@ -1,3 +1,20 @@
+$tertiary-color: #294c60;
+$secondary-color: #adb6c4;
+$primary-color: #001b2e;
+.container {
+    padding: 16px 0;
+    text-align: center;
+    width: 450px;
+  margin: 6rem auto;
+  margin-top: 10rem;
+  padding-top: 1em;
+  padding-bottom: 2em;
+  background: white;
+  border-radius: 4em;
+  z-index: 0;
+  box-shadow: 0 0 25px rgba($color: $tertiary-color, $alpha: 0.2);
+  }
+
 .email {
   margin: 1rem;
   margin-bottom: 4px;
@@ -21,3 +38,26 @@
     margin: 0.5em auto 0 auto;
     text-align: center;
 }
+
+.submit {
+    background-color: $tertiary-color;
+    display: inline-block;
+    color: white;
+    margin-top: 3em;
+    padding: 1em;
+    border: none;
+    cursor: pointer;
+    width: 100px;
+    transition: 0.8s ease;
+    border-radius: 25px;
+    outline: none;
+    text-align: center;
+    margin: 0.5em auto 0 auto;
+  }
+  
+  .submit-div {
+    display: inline-block;
+    text-align: center;
+    border-radius: 15px;
+    margin: 0.5em auto 0 auto;
+  }
