--- a/intelliquote/src/Components/EmailPage/EmailPage.css
+++ b/intelliquote/src/Components/EmailPage/EmailPage.css
@@ -14,7 +14,7 @@
 }
 
 .email {
-  margin: 1rem;
+  margin: 2rem;
   margin-bottom: 4px;
   display: block;
   text-align: center;
@@ -61,5 +61,14 @@
   text-align: center;
   border-radius: 15px;
   margin: 0.5em auto 0 auto;
+  margin-top: 1em;
+  margin-bottom: 2em;
+}
+
+.submit-div:hover {
+  -webkit-transition-duration: 0.3s;
+          transition-duration: 0.3s;
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
 }
 /*# sourceMappingURL=EmailPage.css.map */
