--- a/intelliquote/src/Components/LandingPage/LandingPage.css
+++ b/intelliquote/src/Components/LandingPage/LandingPage.css
@@ -1,1 +1,4 @@
-/* No CSS *//*# sourceMappingURL=LandingPage.css.map */
+.searchbar {
+  background-color: black;
+}
+/*# sourceMappingURL=LandingPage.css.map */
