--- a/intelliquote/src/Components/LandingPage/SearchBar/SearchBar.scss
+++ b/intelliquote/src/Components/LandingPage/SearchBar/SearchBar.scss
@@ -10,7 +10,7 @@ $tertiary-color: #294c60;
 .searchbar-div {
   display: block;
   margin: 0 auto;
-  width: 25%;   
+  width: 25%;
   margin-top: 4rem;
   display: flex;
   justify-content: center;
@@ -27,4 +27,7 @@ $tertiary-color: #294c60;
   padding: 1rem;
   border-radius: 10px;
   flex-wrap: wrap;
+}
+label {
+  color: white;
 }
