--- a/intelliquote/src/Components/EmailPage/EmailPage.scss
+++ b/intelliquote/src/Components/EmailPage/EmailPage.scss
@@ -9,7 +9,7 @@ $primary-color: #001b2e;
   margin-top: 10rem;
   padding-top: 1em;
   padding-bottom: 2em;
-  background: $secondary-color;
+  background: $tertiary-color;
   border-radius: 4em;
   z-index: 0;
   box-shadow: 0 0 25px rgba($color: $tertiary-color, $alpha: 0.2);
@@ -40,7 +40,7 @@ $primary-color: #001b2e;
 }
 
 .submit {
-  background-color: $tertiary-color;
+  background-color: $primary-color;
   display: inline-block;
   color: white;
   margin-top: 3em;
