--- a/intelliquote/src/Components/LandingPage/SearchBar/SearchBar.css
+++ b/intelliquote/src/Components/LandingPage/SearchBar/SearchBar.css
@@ -8,21 +8,29 @@
   margin: 0 auto;
   width: 25%;
   margin-top: 4rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   padding: 1rem;
-  background-color: #001b2e;
+  background-color: #adb6c4;
   border: 2px solid #294c60;
   border-radius: 10px;
 }
 
 .quotes-container {
   margin: 0 auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   padding: 1rem;
   border-radius: 10px;
-  flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
-
 /*# sourceMappingURL=SearchBar.css.map */
