--- a/intelliquote/src/Components/LandingPage/SearchBar/SearchBar.scss
+++ b/intelliquote/src/Components/LandingPage/SearchBar/SearchBar.scss
@@ -15,8 +15,8 @@ $tertiary-color: #294c60;
   display: flex;
   justify-content: center;
   padding: 1rem;
-  background-color: $primary-color;
-  border: 2px solid $tertiary-color;
+  background-color: $secondary-color;
+  border: 2px solid $primary-color;
   border-radius: 10px;
 }
 
